@@ -1,3 +1,9 @@
+2007-08-13 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b101
+
+ * Fix: Better regexp for email check.
+
+ Thanks to the G2 team.
+
 2007-08-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b100
 
  * New: function getDefaultFilename() in lib/filesystem.php
